[package]
name = "laminar-runtime"
version = "0.0.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

frame-executive = { version = "2.0.0-alpha.6", default-features = false }
frame-support = { version = "2.0.0-alpha.6", default-features = false }
frame-system-rpc-runtime-api = { version = "2.0.0-alpha.6", default-features = false }
frame-benchmarking = { version = "2.0.0-alpha.6", default-features = false, optional = true }
pallet-babe = { version = "2.0.0-alpha.6", default-features = false }
pallet-balances = { version = "2.0.0-alpha.6", default-features = false }
pallet-collective = { version = "2.0.0-alpha.6", default-features = false }
pallet-grandpa = { version = "2.0.0-alpha.6", default-features = false }
pallet-indices = { version = "2.0.0-alpha.6", default-features = false }
pallet-membership = { version = "2.0.0-alpha.6", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0-alpha.6", default-features = false }
pallet-session = { version = "2.0.0-alpha.6", default-features = false }
pallet-staking = { version = "2.0.0-alpha.6", default-features = false }
pallet-staking-reward-curve = { version = "2.0.0-alpha.6", default-features = false }
pallet-sudo = { version = "2.0.0-alpha.6", default-features = false }
pallet-timestamp = { version = "2.0.0-alpha.6", default-features = false }
pallet-transaction-payment = { version = "2.0.0-alpha.6", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-alpha.6", default-features = false }
pallet-treasury = { version = "2.0.0-alpha.6", default-features = false }
pallet-utility = { version = "2.0.0-alpha.6", default-features = false }
pallet-im-online = { version = "2.0.0-alpha.6", default-features = false }
pallet-offences = { version = "2.0.0-alpha.6", default-features = false }
sp-api = { version = "2.0.0-alpha.6", default-features = false }
sp-block-builder = { version = "2.0.0-alpha.6", default-features = false }
sp-consensus-babe = { version = "0.8.0-alpha.6", default-features = false }
sp-core = { version = "2.0.0-alpha.6", default-features = false }
sp-inherents = { version = "2.0.0-alpha.6", default-features = false }
sp-io = { version = "2.0.0-alpha.6", default-features = false }
sp-offchain = { version = "2.0.0-alpha.6", default-features = false }
sp-runtime = { version = "2.0.0-alpha.6", default-features = false }
sp-session = { version = "2.0.0-alpha.6", default-features = false }
sp-staking = { version = "2.0.0-alpha.6", default-features = false }
sp-std = { version = "2.0.0-alpha.6", default-features = false }
sp-arithmetic = { version = "2.0.0-alpha.6", default-features = false }
sp-transaction-pool = { version = "2.0.0-alpha.6", default-features = false }
sp-version = { version = "2.0.0-alpha.6", default-features = false }
system = { package = "frame-system", version = "2.0.0-alpha.6", default-features = false }

orml-currencies = { path = "../orml/currencies", default-features = false }
orml-oracle = { path = "../orml/oracle", default-features = false }
orml-oracle-rpc-runtime-api = { path = "../orml/oracle/rpc/runtime-api", default-features = false }
orml-prices = { path = "../orml/prices", default-features = false }
orml-tokens = { path = "../orml/tokens", default-features = false }
orml-traits = { path = "../orml/traits", default-features = false }

synthetic-tokens = { package = "module-synthetic-tokens", path = "../modules/synthetic-tokens", default-features = false }
synthetic-protocol = { package = "module-synthetic-protocol", path = "../modules/synthetic-protocol", default-features = false }
synthetic-protocol-rpc-runtime-api = { path = "../modules/synthetic-protocol/rpc/runtime-api", default-features = false }
module-primitives = { path = "../modules/primitives", default-features = false }
base-liquidity-pools = { package = "module-base-liquidity-pools", path = "../modules/liquidity-pools/base", default-features = false }
margin-liquidity-pools = { package = "module-margin-liquidity-pools", path = "../modules/liquidity-pools/margin", default-features = false }
synthetic-liquidity-pools = { package = "module-synthetic-liquidity-pools", path = "../modules/liquidity-pools/synthetic", default-features = false }
margin-protocol = { package = "module-margin-protocol", path = "../modules/margin-protocol", default-features = false }
margin-protocol-rpc-runtime-api = { path = "../modules/margin-protocol/rpc/runtime-api", default-features = false }
module-traits = { package = "module-traits", path = "../modules/traits", default-features = false }
margin-liquidity-pools-benchmarking = { package = "module-margin-liquidity-pools-benchmarking", path = "../modules/liquidity-pools/margin/benchmarking", default-features = false }
margin-protocol-benchmarking = { package = "module-margin-protocol-benchmarking", path = "../modules/margin-protocol/benchmarking", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.5" }

[features]
default = ["std"]
no_std = []
std = [
	"codec/std",
	"serde",

	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-randomness-collective-flip/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-im-online/std",
	"pallet-offences/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-arithmetic/std",
	"sp-transaction-pool/std",
	"system/std",

	"orml-currencies/std",
	"orml-oracle-rpc-runtime-api/std",
	"orml-oracle/std",
	"orml-prices/std",
	"orml-tokens/std",
	"orml-traits/std",

	"margin-liquidity-pools/std",
	"synthetic-liquidity-pools/std",
	"module-primitives/std",
	"synthetic-protocol/std",
	"synthetic-protocol-rpc-runtime-api/std",
	"synthetic-tokens/std",
	"margin-protocol/std",
	"margin-protocol-rpc-runtime-api/std",
	"module-traits/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "margin-liquidity-pools-benchmarking/runtime-benchmarks",
    "margin-protocol-benchmarking/runtime-benchmarks",
]
