[package]
name = "laminar-service"
version = "0.2.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
hex-literal = "0.2.1"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
ansi_term = "0.12.1"

frame-benchmarking = { version = "2.0.0-rc5" }
frame-system-rpc-runtime-api = { version = "2.0.0-rc5" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-rc5" }
sc-basic-authorship = { version = "0.8.0-rc5" }
sc-chain-spec = { version = "2.0.0-rc5" }
sc-cli = { version = "0.8.0-rc5" }
sc-client-api = { version = "2.0.0-rc5" }
sc-consensus = { version = "0.8.0-rc5" }
sc-consensus-babe = { version = "0.8.0-rc5" }
sc-executor = { version = "0.8.0-rc5" }
sc-finality-grandpa = { version = "0.8.0-rc5" }
sc-informant = { version = "0.8.0-rc5" }
sc-network = { version = "0.8.0-rc5" }
sc-service = { version = "0.8.0-rc5" }
sc-telemetry = { version = "2.0.0-rc5" }
sc-transaction-pool = { version = "2.0.0-rc5" }
sp-api = { version = "2.0.0-rc5" }
sp-arithmetic = { version = "2.0.0-rc5" }
sp-block-builder = { version = "2.0.0-rc5" }
sp-blockchain = { version = "2.0.0-rc5" }
sp-consensus = { version = "0.8.0-rc5" }
sp-consensus-babe = { version = "0.8.0-rc5" }
sp-core = { version = "2.0.0-rc5" }
sp-finality-grandpa = { version = "2.0.0-rc5" }
sp-inherents = { version = "2.0.0-rc5" }
sp-offchain = { version = "2.0.0-rc5" }
sp-runtime = { version = "2.0.0-rc5" }
sp-session = { version = "2.0.0-rc5" }
sp-timestamp = { version = "2.0.0-rc5" }
sp-transaction-pool = { version = "2.0.0-rc5" }
sp-trie = { version = "2.0.0-rc5" }

margin-protocol = { package="module-margin-protocol", path = "../modules/margin-protocol" }
margin-protocol-rpc = { path = "../modules/margin-protocol/rpc" }
orml-oracle-rpc = { path = "../orml/oracle/rpc" }
synthetic-tokens = { package="module-synthetic-tokens", path = "../modules/synthetic-tokens" }
synthetic-protocol-rpc = { path = "../modules/synthetic-protocol/rpc" }

dev-runtime = { path = "../runtime/dev" }
runtime-common = { path = "../runtime/common" }

laminar-primitives = { path = "../primitives" }
laminar-rpc = { path = "../rpc" }

cumulus-primitives = { git = "https://github.com/paritytech/cumulus", branch = "gav-xcmp" }
cumulus-network = { git = "https://github.com/paritytech/cumulus", branch = "gav-xcmp" }
cumulus-service = { git = "https://github.com/paritytech/cumulus", branch = "gav-xcmp" }
cumulus-consensus = { git = "https://github.com/paritytech/cumulus", branch = "gav-xcmp" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcmp" }
polkadot-collator = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcmp" }

[dev-dependencies]
sc-consensus-babe = { version = "0.8.0-rc5", features = ["test-helpers"] }

[features]
default = ["std"]
std = []
runtime-benchmarks = [
	"dev-runtime/runtime-benchmarks",
]
