[package]
name = "laminar-service"
version = "0.4.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
hex-literal = "0.3.1"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

frame-benchmarking = { version = "2.0.0" }
frame-system-rpc-runtime-api = { version = "2.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0" }
sc-basic-authorship = { version = "0.8.0" }
sc-chain-spec = { version = "2.0.0" }
sc-client-api = { version = "2.0.0" }
sc-consensus = { version = "0.8.0" }
sc-consensus-babe = { version = "0.8.0" }
sc-executor = { version = "0.8.0" }
sc-finality-grandpa = { version = "0.8.0" }
sc-network = { version = "0.8.0" }
sc-service = { version = "0.8.0" }
sc-telemetry = { version = "2.0.0" }
sc-transaction-pool = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
sp-arithmetic = { version = "2.0.0" }
sp-block-builder = { version = "2.0.0" }
sp-blockchain = { version = "2.0.0" }
sp-consensus = { version = "0.8.0" }
sp-consensus-babe = { version = "0.8.0" }
sc-consensus-slots = { version = "0.8.0" }
sp-core = { version = "2.0.0" }
sp-finality-grandpa = { version = "2.0.0" }
sp-inherents = { version = "2.0.0" }
sp-offchain = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }
sp-session = { version = "2.0.0" }
sp-transaction-pool = { version = "2.0.0" }
sp-trie = { version = "2.0.0" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.8.0"}

margin-protocol = { package="module-margin-protocol", path = "../modules/margin-protocol" }
synthetic-tokens = { package="module-synthetic-tokens", path = "../modules/synthetic-tokens" }
margin-protocol-rpc = { path = "../modules/margin-protocol/rpc" }
orml-oracle-rpc = { path = "../orml/oracle/rpc" }
synthetic-protocol-rpc = { path = "../modules/synthetic-protocol/rpc" }

dev-runtime = { path = "../runtime/dev" }
runtime-common = { path = "../runtime/common" }

laminar-primitives = { path = "../primitives" }
laminar-rpc = { path = "../rpc" }

[dev-dependencies]
sc-consensus-babe = { version = "0.8.0", features = ["test-helpers"] }

[features]
default = ["std"]
std = []
runtime-benchmarks = [
	"dev-runtime/runtime-benchmarks",
]
