[package]
name = "module-primitives"
version = "0.0.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0-alpha.5", default-features = false }
sp-arithmetic = { version = "2.0.0-alpha.5", default-features = false }
orml-utilities = { path = "../../orml/utilities", default-features = false }
orml-prices = { path = "../../orml/prices", default-features = false }
bitmask = { version = "0.5.0", default-features = false }
sp-std = { version = "2.0.0-alpha.5", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"serde",
	"orml-utilities/std",
	"orml-prices/std",
	"bitmask/std",
	"sp-std/std",
	"sp-arithmetic/std",
]
