[package]
name = "module-synthetic-protocol"
version = "0.4.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }

frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

orml-traits = { path = "../../orml/traits", default-features = false }
orml-utilities = { path = "../../orml/utilities", default-features = false }

laminar-primitives = { path = "../../primitives", default-features = false }
module-traits = { path = "../traits", default-features = false }
module-synthetic-tokens = { path = "../synthetic-tokens", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false }
orml-tokens = { path = "../../orml/tokens"}
orml-currencies = { path = "../../orml/currencies"}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-utilities/std",
	"laminar-primitives/std",
	"module-traits/std",
	"module-synthetic-tokens/std",
]
