[package]
name = "module-synthetic-tokens"
version = "0.0.1"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", default-features = false }

palette-support = { git = "https://github.com/paritytech/substrate.git", default-features = false }
palette-system = { git = "https://github.com/paritytech/substrate.git", default-features = false }

orml-traits = { path = "../../orml/traits", default-features = false }

module-primitives = { path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sr-primitives/std",
	"runtime_io/std",
	"rstd/std",
	"palette-support/std",
	"palette-system/std",
	"orml-traits/std",
	"module-primitives/std",
]
