[package]
name = "module-traits"
version = "0.1.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
sp-std = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
sp-arithmetic = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
frame-support = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }

primitives = { package = "module-primitives", path = "../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"primitives/std",
]
