[package]
name = "module-traits"
version = "0.4.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-arithmetic = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }

primitives = { package = "laminar-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"frame-support/std",
	"primitives/std",
]
