[package]
name = "runtime-common"
version = "0.4.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
orml-oracle = { path = "../../orml/oracle", default-features = false }
primitives = { package = "laminar-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"orml-oracle/std",
	"primitives/std",
]
